# auto_generate_cdp

./: .gitignore  Cargo.toml  README.md  build.rs
src/: compile.rs  lib.rs  main.rs  test.rs  types.rs
