[package]
name = "auto_generate_cdp"
version = "0.1.0"
authors = ["mdrokz <mohammadmunshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = '1.0.64'
quote = '1.0.9'
proc-macro2 = '1.0.26'
convert_case = '0.4.0'